--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
 server.error.include-message=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
