--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -3,11 +3,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.password=${mysql_password:mysql@sit}
 #spring.datasource.url=jdbc:mysql://${mysql_url:dbserver}:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=_zehc555
-spring.datasource.url=jdbc:mysql://localhost:3306/integrated
+spring.datasource.password=Basba_4565
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
 server.error.include-message=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.javax.persistence.validation.mode=none
