--- a/Front-end/.env.production
+++ b/Front-end/.env.production
@@ -1,2 +1,2 @@
-VITE_ROOT_API=http://intproj22.sit.kmutt.ac.th:8080/ssi1/api
+VITE_ROOT_API=https://intproj22.sit.kmutt.ac.th/ssi1/api
 # VITE_ROOT_API=http://localhost:8080
