--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -13,13 +13,18 @@
     "@heroicons/vue": "^2.0.18",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^10.1.2",
+    "@vueuse/integrations": "^10.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "pinia": "^2.0.36",
     "vue": "^3.2.47",
     "vue-html-editor": "^0.2.1",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.12.0",
